fixed text alignment

--- a/style/index.css
+++ b/style/index.css
@@ -73,22 +73,32 @@ h1{
     text-decoration: none;
     }
     
-#about{
+.topsection {
         display: flex;
-        width:3px ;
-         }
-
-    h2{
-       
-       margin-right:0%;
-        font-size: 20px;
-        
+        flex-direction: row;
+        justify-content: center;
     }
-    #about button{
+.description {
+    padding:20px;
+    
+}   
+h2{
+    padding: 20px;
+}
+    
+    .topsection button{
         background-color:white;
         color: teal;
         border: 1px solid black;
-        padding: 12px 28px;
+        padding: 20px;
+        margin-left: 20px;
+        }
+ .description .p{
+    padding: 20px;
+    margin-left: 20px;
+    text-align: center;
+    width: 50%;
+
         }
     .projectpics{
         display: flex;
